--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Preact + TS</title>
+    <title>Module Replacements Hub</title>
+    <meta name="description" content="Find native alternatives and better replacements for npm packages">
   </head>
   <body>
     <div id="app"></div>
